# fbdc

./: .gitignore  README.md  pyproject.toml
src/fbdc/: __init__.py  io.py  main.py  server.py  utils.py
src/fbdc/client/: __init__.py  base.py  client.py  fsclient.py  watchdog.py
